# wilted

./: .coverage  .gitignore  BUGS.md  HISTORY.md  Makefile  README.md  TUI_PLAN.md  lilt  lilt-tui  pyproject.toml  readarticle  tasks.md  wilted
migrations/: 001_initial.py
scripts/: local.wilted-nightly.plist  measure_mlx_memory.py  wilted-nightly.sh
src/lilt/: __init__.py  __main__.py  cache.py  cli.py  engine.py  fetch.py  ingest.py  queue.py  state.py  text.py  tui.py
src/wilted/: __init__.py  __main__.py  ads.py  cache.py  classify.py  cli.py  db.py  discover.py  download.py  engine.py  feeds.py  fetch.py  ingest.py  llm.py  log.py  migrate.py  onboard.py  playlists.py  preferences.py  prepare.py  queue.py  report.py  state.py  text.py  transcribe.py  tui.py
src/wilted/tui/: __init__.py  app.py
src/wilted/tui/screens/: add_article.py  confirm.py  playback.py  report.py  text_preview.py  voice_settings.py
src/wilted/tui/widgets/: playback_bar.py
tests/: conftest.py  test_ads.py  test_cache.py  test_classify.py  test_cli.py  test_db.py  test_discover.py  test_download.py  test_e2e.py  test_edge_cases.py  test_engine.py  test_feeds.py  test_fetch.py  test_ingest.py  test_llm.py  test_onboard.py  test_playlists.py  test_preferences.py  test_prepare.py  test_queue.py  test_report.py  test_resume.py  test_slow.py  test_state.py  test_text.py  test_transcribe.py  test_tui.py
