[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wilted"
version = "0.2.0"
description = "Local TTS article reader using Kokoro via mlx-audio on Apple Silicon"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mlx-audio[tts]",
    "trafilatura",
    "numpy",
    "sounddevice",
    "peewee>=3.17",
    "feedparser>=6.0",
]

[project.optional-dependencies]
tui = ["textual>=8.0"]
test = ["pytest", "pytest-asyncio"]
dev = ["ruff"]

[project.scripts]
wilted = "wilted.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "TCH"]

[dependency-groups]
dev = [
    "pygments>=2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
