[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wilted"
version = "0.2.0"
description = "Local TTS article reader using Kokoro via mlx-audio on Apple Silicon"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mlx-audio[tts]",
    "trafilatura",
    "numpy",
    "sounddevice",
    "peewee>=3.17",
    "feedparser>=6.0",
    "tqdm",
    "rich>=13.0",
    "playwright>=1.58.0",
    "textual>=8.0",
]

[project.optional-dependencies]
llm = ["mlx-vlm", "llama-cpp-python"]

[project.scripts]
wilted = "wilted.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast in-process tests with mocked boundaries",
    "integration: multi-module tests using the real DB/filesystem or heavier wiring",
    "e2e: subprocess CLI tests that exercise the real entrypoint",
    "tui: Textual pilot tests for the terminal UI",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "TCH"]

[dependency-groups]
dev = [
    "pygments>=2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0",
    "ruff>=0.0.1",
]
